Use \mathbb{I} for inner/guest PVM state rather than \mathbb{G}
This frees up \mathbb{G} to be used for guarantees.

--- a/preamble.tex
+++ b/preamble.tex
@@ -402,7 +402,7 @@
 
 %%%%%%%%%%%%
 % Named types (blackboard)
-\newcommand*{\pvmguest}{\mathbb{G}}
+\newcommand*{\innerpvm}{\mathbb{I}}
 \newcommand*{\pg¬code}{\mathbf{p}}
 \newcommand*{\pg¬ram}{\mathbf{u}}
 \newcommand*{\pg¬pc}{i}
