--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -35,7 +35,7 @@
   \item[$\workcontext$] The set of work-$\mathbb{C}$ontexts. See equation \ref{eq:workcontext}. \emph{Not used as the set of complex numbers.}
   \item[$\workdigest$] The set of work-$\mathbb{D}$igests. See equation \ref{eq:workdigest}.
   \item[$\workerror$] The set of work execution $\mathbb{E}$rrors. See equation \ref{eq:workerror}.
-  \item[$\pvmguest$] The set representing the state of a $\mathbb{G}$uest \textsc{pvm} instance. See equation \ref{eq:pvmguest}.
+  \item[$\innerpvm$] The set representing the state of an $\mathbb{I}$nner \textsc{pvm} instance. See equation \ref{eq:innerpvm}.
   \item[$\hash$] The set of 32-octet cryptographic values, equivalent to $\blob[32]$. Often a $\mathbb{H}$ash function's result. See section \ref{sec:cryptography}.
   \begin{description}
     \item[$\edkey$] The set of Ed25519 public keys. A subset of $\blob[32]$. See section \ref{sec:signing}.
