Fix misnamed macros
\reportspostassurances and \reportspostguarantees were the wrong way
around.

Additionally, improve some of the wording around timing out of reports
pending availability. Availability assignments are now proactively
cleared when the timeout elapses.

--- a/preamble.tex
+++ b/preamble.tex
@@ -774,8 +774,8 @@
 \newcommand*{\reports}{\rho}
 \newcommand*{\reportspre}{\reports}
 \newcommand*{\reportspostjudgement}{\reports^\dagger}
-\newcommand*{\reportspostguarantees}{\reports^\ddagger}
-\newcommand*{\reportspostassurances}{\reports'}
+\newcommand*{\reportspostassurances}{\reports^\ddagger}
+\newcommand*{\reportspostguarantees}{\reports'}
 
 \newcommand*{\activity}{\pi}
 \newcommand*{\valstatsaccumulator}{\activity_V}
