--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -206,7 +206,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\reports$] The pending reports, per core, which are being made available prior to accumulation. See equation \ref{eq:reportingstate}.
   \begin{description}
     \item[$\reportspostjudgement$] The post-judgment, pre-guarantees-extrinsic intermediate state. See equation \ref{eq:removenonpositive}.
-    \item[$\reportspostguarantees$] The post-guarantees-extrinsic, pre-assurances-extrinsic, intermediate state. See equation \ref{eq:reportspostguaranteesdef}.
+    \item[$\reportspostassurances$] The post-assurances-extrinsic, pre-guarantees-extrinsic, intermediate state. See equation \ref{eq:reportspostassurancesdef}.
   \end{description}
   \item[$\thestate$] The overall state of the system. See equations \ref{eq:statetransition}, \ref{eq:statecomposition}.
   \item[$\thetime$] The most recent block's timeslot. See equation \ref{eq:timeslotindex}.
@@ -272,7 +272,7 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\Crotationperiod = 10$] The rotation period of validator-core assignments, in timeslots. See sections \ref{sec:coresandvalidators} and \ref{sec:workreportguarantees}.
   \item[$\Cminpublicindex = 2^{16}$] The minimum public service index. Services of indices below these may only be created by the Registrar. See equation \ref{eq:newserviceindex}.
   \item[$\Cmaxpackagexts = 128$] The maximum number of extrinsics in a work-package. See equation \ref{eq:limitworkpackagebandwidth}.
-  \item[$\Cassurancetimeoutperiod = 5$] The period in timeslots after which reported but unavailable work may be replaced. See equation \ref{eq:reportspostguaranteesdef}.
+  \item[$\Cassurancetimeoutperiod = 5$] The period in timeslots after which reported but unavailable work is cleared. See equation \ref{eq:reportspostassurancesdef}.
   \item[$\Cvalcount = 1023$] The total number of validators.
   \item[$\Cmaxauthcodesize = 64,000$] The maximum size of is-authorized code in octets. See equation \ref{eq:isauthinvocation}.
   \item[$\Cmaxbundlesize = 13,794,305$] The maximum size of an encoded work-package together with its extrinsic data and import implications, in octets. See equation \ref{eq:checkextractsize}.
