--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -3,7 +3,7 @@
 
 Reporting and assurance are the two on-chain processes we do to allow the results of in-core computation to make their way into the state of service accounts, $\accounts$. A \emph{work-package}, which comprises several \emph{work-items}, is transformed by validators acting as \emph{guarantors} into its corresponding \emph{work-report}, which similarly comprises several \emph{work-digests} and then presented on-chain within the \emph{guarantees} extrinsic. At this point, the work-package is erasure coded into a multitude of segments and each segment distributed to the associated validator who then attests to its availability through an \emph{assurance} placed on-chain. After enough assurances the work-report is considered \emph{available}, and the work-digests transform the state of their associated service by virtue of accumulation, covered in section \ref{sec:accumulation}. The report may also be \emph{timed-out}, implying it may be replaced by another report without accumulation.
 
-From the perspective of the work-report, therefore, the guarantee happens first and the assurance afterwards. However, from the perspective of a block's state-transition, the assurances are best processed first since each core may only have a single work-report pending its package becoming available at a time. Thus, we will first cover the transition arising from processing the availability assurances followed by the work-report guarantees. This synchroneity can be seen formally through the requirement of an intermediate state $\reportspostguarantees$, utilized later in equation \ref{eq:reportcoresareunusedortimedout}.
+From the perspective of the work-report, therefore, the guarantee happens first and the assurance afterwards. However, from the perspective of a block's state-transition, the assurances are best processed first since each core may only have a single work-report pending its package becoming available at a time. Thus, we will first cover the transition arising from processing the availability assurances followed by the work-report guarantees. This synchroneity can be seen formally through the requirement of an intermediate state $\reportspostassurances$, utilized later in equation \ref{eq:reportcoresareunused}.
 
 
 
@@ -23,7 +23,7 @@ The state of the reporting and availability portion of the protocol is largely c
   }
 \end{equation}
 
-As usual, intermediate and posterior values ($\reportspostjudgement$, $\reportspostguarantees$, $\reportspostassurances$) are held under the same constraints as the prior value.
+As usual, intermediate and posterior values ($\reportspostjudgement$, $\reportspostassurances$, $\reportspostguarantees$) are held under the same constraints as the prior value.
 
 \subsubsection{Work Report}
 \label{sec:workreport}
@@ -32,13 +32,13 @@ A work-report, of the set $\workreport$, is defined as a tuple of the work-packa
   \label{eq:workreport}
   \workreport \equiv \tuple{
     \begin{aligned}
-      &\isa{\wr¬avspec}{\avspec},\ 
-      \isa{\wr¬context}{\workcontext},\ 
-      \isa{\wr¬core}{\coreindex},\ 
-      \isa{\wr¬authorizer}{\hash},\ 
+      &\isa{\wr¬avspec}{\avspec},\
+      \isa{\wr¬context}{\workcontext},\
+      \isa{\wr¬core}{\coreindex},\
+      \isa{\wr¬authorizer}{\hash},\
       \isa{\wr¬authtrace}{\blob},\\
-      &\isa{\wr¬srlookup}{\dictionary{\hash}{\hash}},\ 
-      \isa{\wr¬digests}{\sequence[1:\Cmaxpackageitems]{\workdigest}},\ 
+      &\isa{\wr¬srlookup}{\dictionary{\hash}{\hash}},\
+      \isa{\wr¬digests}{\sequence[1:\Cmaxpackageitems]{\workdigest}},\
       \isa{\wr¬authgasused}{\gas}
     \end{aligned}
   }
@@ -134,7 +134,7 @@ In order to ensure fair use of a block's extrinsic space, work-reports are limit
 
 \subsection{Package Availability Assurances}
 
-We first define $\reportspostguarantees$, the intermediate state to be utilized next in section \ref{sec:workreportguarantees} as well as $\justbecameavailable$, the set of available work-reports, which will we utilize later in section \ref{sec:accumulation}. Both require the integration of information from the assurances extrinsic $\xtassurances$.
+We first define $\reportspostassurances$, the intermediate state to be utilized next in section \ref{sec:workreportguarantees} as well as $\justbecameavailable$, the set of available work-reports, which will we utilize later in section \ref{sec:accumulation}. Both require the integration of information from the assurances extrinsic $\xtassurances$.
 
 \subsubsection{The Assurances Extrinsic}
 The assurances extrinsic is a sequence of \emph{assurance} values, at most one per validator. Each assurance is a sequence of binary values (\ie a bitstring), one per core, together with a signature and the index of the validator who is assuring. A value of $1$ (or $\top$, if interpreted as a Boolean) at any given index implies that the validator assures they are contributing to its availability.\footnote{This is a ``soft'' implication since there is no consequence on-chain if dishonestly reported. For more information on this implication see section \ref{sec:assurance}.} Formally:
@@ -179,10 +179,10 @@ A work-report is said to become \emph{available} if and only if there are a clea
     }}
 \end{align}
 
-This value is utilized in the definition of both $\accountspost$ and $\reportspostguarantees$ which we will define presently as equivalent to $\reportspostjudgement$ except for the removal of items which are either now available or have timed out:
+This value is utilized in the definition of both $\accountspost$ and $\reportspostassurances$ which we will define presently as equivalent to $\reportspostjudgement$ except for the removal of items which are either now available or have timed out:
 \begin{align}
-  \label{eq:reportspostguaranteesdef}
-  \forall \cX \in \coreindex: \reportspostguarantees\subb{\cX} \equiv \begin{cases}
+  \label{eq:reportspostassurancesdef}
+  \forall \cX \in \coreindex: \reportspostassurances\subb{\cX} \equiv \begin{cases}
     \none &\when\reports\subb{\cX}_\rs¬workreport \in \justbecameavailable \vee \H_\¬timeslot \ge \reportspostjudgement\subb{\cX}_\rs¬timestamp + \Cassurancetimeoutperiod\\
     \reportspostjudgement\subb{\cX} &\otherwise
   \end{cases}
@@ -294,15 +294,15 @@ We denote $\incomingreports$ to be the set of work-reports in the present extrin
 \end{align}
 
 No reports may be placed on cores with a report pending availability on it. A report is valid only if the authorizer hash is present in the authorizer pool of the core on which the work is reported. Formally:
-\begin{equation}\label{eq:reportcoresareunusedortimedout}
+\begin{equation}\label{eq:reportcoresareunused}
   \forall \wrX \in \incomingreports :
-    \reportspostguarantees\subb{\wrX_\wr¬core} = \none \wedge \wrX_\wr¬authorizer \in \authpool\subb{\wrX_\wr¬core}
+    \reportspostassurances\subb{\wrX_\wr¬core} = \none \wedge \wrX_\wr¬authorizer \in \authpool\subb{\wrX_\wr¬core}
 \end{equation}
 
 We require that the gas allotted for accumulation of each work-digest in each work-report respects its service's minimum gas requirements. We also require that all work-reports' total allotted accumulation gas is no greater than the overall gas limit $\Creportaccgas$:
 \begin{equation}
   \forall \wrX \in \incomingreports:
-    \sum_{\wdX \in \wrX_\wr¬digests}\!(\wdX_\wd¬gaslimit) \le \Creportaccgas \ \wedge \ 
+    \sum_{\wdX \in \wrX_\wr¬digests}\!(\wdX_\wd¬gaslimit) \le \Creportaccgas \ \wedge \
     \forall \wdX \in \wrX_\wr¬digests: \wdX_\wd¬gaslimit \ge \accounts\subb{\wdX_\wd¬serviceindex}_\sa¬minaccgas
 \end{equation}
 
@@ -408,15 +408,15 @@ Finally, we require that all work-digests within the extrinsic predicted the cor
 
 \subsection{Transitioning for Reports}
 
-We define $\reportspostassurances$ as being equivalent to $\reportspostguarantees$, except where the extrinsic replaced an entry. In the case an entry is replaced, the new value includes the present time $\thetime'$ allowing for the value to be replaced without respect to its availability once sufficient time has elapsed (see equation \ref{eq:reportcoresareunusedortimedout}).
+We define $\reportspostguarantees$ as being equivalent to $\reportspostassurances$, except where the extrinsic replaced an entry. In the case an entry is replaced, the new value includes the present time $\thetime'$ so that it can be cleared if it is not made available quickly enough (see equation \ref{eq:reportspostassurancesdef}).
 \begin{equation}
-    \forall \cX \in \coreindex : \reportspostassurances\subb{\cX} \equiv \begin{cases}
+    \forall \cX \in \coreindex : \reportspostguarantees\subb{\cX} \equiv \begin{cases}
       \tup{\¬workreport,\,\is{\rs¬timestamp}{\thetime'}} &\when \exists \tup{\¬workreport,\,\xg¬timeslot,\,\xg¬credential} \in \xtguarantees, \¬workreport_\wr¬core = \cX \\
-      \reportspostguarantees\subb{\cX} &\otherwise
+      \reportspostassurances\subb{\cX} &\otherwise
     \end{cases}
 \end{equation}
 
-This concludes the section on reporting and assurance. We now have a complete definition of $\reportspostassurances$ together with $\justbecameavailable$ to be utilized in section \ref{sec:accumulation}, describing the portion of the state transition happening once a work-report is guaranteed and made available.
+This concludes the section on reporting and assurance. We now have a complete definition of $\reportspostguarantees$ together with $\justbecameavailable$ to be utilized in section \ref{sec:accumulation}, describing the portion of the state transition happening once a work-report is guaranteed and made available.
 
 
 
