indicate in (4.14) that rho_prime depends additionaly on beta_dagger (11.33), alpha (11.23), delta (11.30), and eta_prime, kappa_prime, lambda_prime, psi_prime (11.22)

--- a/text/overview.tex
+++ b/text/overview.tex
@@ -55,7 +55,7 @@ Much as in the \emph{YP}, we specify $\transitionstate$ as the implication of fo
   \disputes' &\prec \tup{\xtdisputes, \thetime, \activeset, \previousset, \disputes} \\
   \reportspostjudgement &\prec \tup{\xtdisputes, \reports} \label{eq:rhodagger} \\
   \reportspostguarantees &\prec \tup{\xtassurances, \activeset, \reportspostjudgement} \label{eq:rhoddagger} \\
-  \reports' &\prec \tup{\xtguarantees, \reportspostguarantees, \activeset, \thetime'} \label{eq:rhoprime} \\
+  \reports' &\prec \tup{\xtguarantees, \reportspostguarantees, \authpool, \accountspre, \activeset', \previousset', \thetime', \entropy', \disputes', \recenthistorypostparentstaterootupdate} \label{eq:rhoprime} \\
   \justbecameavailable^* &\prec \tup{\xtassurances, \reportspostjudgement} \\
   \tup{\ready', \accumulated', \accountspostxfer, \privileges', \stagingset', \authqueue', \lastaccout', \accumulationstatistics} &\prec \tup{\justbecameavailable^*, \ready, \accumulated, \accountspre, \privileges, \stagingset, \authqueue, \thetime, \thetime'} \label{eq:accountspostxfer} \\
   \recenthistory' &\prec \tup{\theheader, \xtguarantees, \recenthistorypostparentstaterootupdate, \lastaccout'} \label{eq:betaprime} \\
