indicate in (4.16) that accumulation depends additionaly on eta_prime (B.11)

--- a/text/overview.tex
+++ b/text/overview.tex
@@ -57,7 +57,7 @@ Much as in the \emph{YP}, we specify $\transitionstate$ as the implication of fo
   \reportspostguarantees &\prec \tup{\xtassurances, \activeset, \reportspostjudgement} \label{eq:rhoddagger} \\
   \reports' &\prec \tup{\xtguarantees, \reportspostguarantees, \authpool, \accountspre, \activeset', \previousset', \thetime', \entropy', \disputes', \recenthistorypostparentstaterootupdate} \label{eq:rhoprime} \\
   \justbecameavailable^* &\prec \tup{\xtassurances, \reportspostjudgement} \\
-  \tup{\ready', \accumulated', \accountspostxfer, \privileges', \stagingset', \authqueue', \lastaccout', \accumulationstatistics} &\prec \tup{\justbecameavailable^*, \ready, \accumulated, \accountspre, \privileges, \stagingset, \authqueue, \thetime, \thetime'} \label{eq:accountspostxfer} \\
+  \tup{\ready', \accumulated', \accountspostxfer, \privileges', \stagingset', \authqueue', \lastaccout', \accumulationstatistics} &\prec \tup{\justbecameavailable^*, \ready, \accumulated, \accountspre, \privileges, \stagingset, \authqueue, \thetime, \thetime', \entropy'} \label{eq:accountspostxfer} \\
   \recenthistory' &\prec \tup{\theheader, \xtguarantees, \recenthistorypostparentstaterootupdate, \lastaccout'} \label{eq:betaprime} \\
   \accountspostpreimage &\prec \tup{\xtpreimages, \accountspostxfer, \thetime'} \label{eq:accountspostpreimage} \\
   \authpool' &\prec \tup{\theheader, \xtguarantees, \authqueue', \authpool} \\
