--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -35,13 +35,12 @@
   \item[$\workcontext$] The set of work-$\mathbb{C}$ontexts. See equation \ref{eq:workcontext}. \emph{Not used as the set of complex numbers.}
   \item[$\workdigest$] The set of work-$\mathbb{D}$igests. See equation \ref{eq:workdigest}.
   \item[$\workerror$] The set of work execution $\mathbb{E}$rrors. See equation \ref{eq:workerror}.
-  \item[$\innerpvm$] The set representing the state of an $\mathbb{I}$nner \textsc{pvm} instance. See equation \ref{eq:innerpvm}.
   \item[$\hash$] The set of 32-octet cryptographic values, equivalent to $\blob[32]$. Often a $\mathbb{H}$ash function's result. See section \ref{sec:cryptography}.
   \begin{description}
     \item[$\edkey$] The set of Ed25519 public keys. A subset of $\blob[32]$. See section \ref{sec:signing}.
     \item[$\bskey$] The set of Bandersnatch public keys. A subset of $\blob[32]$. See section \ref{sec:cryptography} and appendix \ref{sec:bandersnatch}.
   \end{description}
-  \item[$\operandtuple$] The $\mathbb{I}$nformation concerning a single work-item once prepared as an operand for the accumulation function. See equation \ref{eq:operandtuple}.
+  \item[$\innerpvm$] The set representing the state of an $\mathbb{I}$nner \textsc{pvm} instance. See equation \ref{eq:innerpvm}.
   \item[$\segment$] The set of data segments, equivalent to $\blob[\Csegmentsize]$. See equation \ref{eq:segment}.
   \item[$\valkey$] The set of validator $\mathbb{K}$ey-sets. See equation \ref{eq:validatorkeys}.
   \item[$\implications$] The set representing implications of accumulation. See equation \ref{eq:implications}.
@@ -50,6 +49,7 @@
   \item[$\workreport$] The set of work-$\mathbb{R}$eports. See equation \ref{eq:workreport}. \emph{Note used for the set of real numbers.}
   \item[$\partialstate$] The set representating a portion of overall $\mathbb{S}$tate, used during accumulation. See equation \ref{eq:partialstate}.
   \item[$\safroleticket$] The set of seal-key $\mathbb{T}$ickets. See equation \ref{eq:ticket}.
+  \item[$\operandtuple$] The information concerning a single work-item once prepared as an operand for the accumulation function. See equation \ref{eq:operandtuple}.
   \item[$\readable{\memory}$] The set of $\mathbb{V}$alidly readable indices for \textsc{pvm} \textsc{ram} $\memory$. See appendix \ref{sec:virtualmachine}.
   \item[$\writable{\memory}$] The set of $\mathbb{V}$alidly writable indices for \textsc{pvm} \textsc{ram} $\memory$. See appendix \ref{sec:virtualmachine}.
   \item[$\edsignature{k}{m}$] The set of $\mathbb{V}$alid Ed25519 signatures of the key $k$ and message $m$. A subset of $\blob[64]$. See section \ref{sec:cryptography}.
