--- a/text/header.tex
+++ b/text/header.tex
@@ -34,9 +34,9 @@ The extrinsic hash is a Merkle commitment to the block's extrinsic data, taking 
     \encodedisputes{\xtdisputes}
   } \\
   \also \mathbf{g} &= \encode{\var{\sq{\build{
-    \tup{\blake{\xg¬workreport}, \encode[4]{\xg¬timeslot}, \var{\xg¬credential}}
+    \tup{\blake{\g¬workreport}, \encode[4]{\g¬timeslot}, \var{\g¬credential}}
   }{
-    \tup{\xg¬workreport, \xg¬timeslot, \xg¬credential} \orderedin \xtguarantees
+    \tup{\g¬workreport, \g¬timeslot, \g¬credential} \orderedin \xtguarantees
   }}}}
 \end{align}
 
