--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -51,9 +51,9 @@ The state serialization is then defined as the dictionary built from the amalgam
     &&C(9) &\mapsto \encode{\previousset} \;, \\
     &&C(10) &\mapsto \encode{
       \sq{\build{
-        \maybe{\tup{\rs¬workreport, \encode[4]{\rs¬timestamp}}}
+        \maybe{\tup{\aa¬guarantee, \encode[4]{\aa¬timestamp}}}
       }{
-        \tup{\rs¬workreport, \rs¬timestamp} \orderedin \reports
+        \tup{\aa¬guarantee, \aa¬timestamp} \orderedin \availassignments
       }}
     } \;, \\
     &&C(11) &\mapsto \encode[4]{\thetime} \;, \\
