--- a/text/recent_history.tex
+++ b/text/recent_history.tex
@@ -43,9 +43,9 @@ The final state transition for $\recenthistory$ appends a new item including the
       }}}^\Crecenthistorylen \\
     \where \rh¬reportedpackagehashes &= \set{\build{
         \kv{
-          ((g_\xg¬workreport)_\wr¬avspec)_\as¬packagehash
+          ((g_\g¬workreport)_\wr¬avspec)_\as¬packagehash
         }{
-          ((g_\xg¬workreport)_\wr¬avspec)_\as¬segroot
+          ((g_\g¬workreport)_\wr¬avspec)_\as¬segroot
         }
       }{
         g \in \xtguarantees
