--- a/preamble.tex
+++ b/preamble.tex
@@ -466,6 +466,12 @@
 \newcommand*{\wr¬srlookup}{\mathbf{l}}
 \newcommand*{\wr¬digests}{\mathbf{d}}
 
+\newcommand*{\guarantee}{\mathbb{G}}
+\newcommand*{\gX}{\mathbf{g}}
+\newcommand*{\g¬workreport}{\¬workreport}
+\newcommand*{\g¬timeslot}{t}
+\newcommand*{\g¬credential}{a}
+
 \newcommand*{\workdigest}{\mathbb{D}}
 \newcommand*{\wdX}{\mathbf{d}}
 \newcommand*{\wd¬serviceindex}{\¬serviceindex}
@@ -590,9 +596,10 @@
 \newcommand*{\vs¬guarantees}{g}
 \newcommand*{\vs¬assurances}{a}
 
-% Used for \reports
-\newcommand*{\rs¬workreport}{\¬workreport}
-\newcommand*{\rs¬timestamp}{t}
+% Used for \availassignments
+\newcommand*{\aaX}{\mathbf{a}}
+\newcommand*{\aa¬guarantee}{\mathbf{g}}
+\newcommand*{\aa¬timestamp}{t}
 
 % Used for \recenthistory
 \newcommand*{\rh¬headerhash}{h}
@@ -647,11 +654,6 @@
 \newcommand*{\xa¬availabilities}{f}
 \newcommand*{\xa¬assurer}{v}
 \newcommand*{\xa¬signature}{\¬signature}
-
-\newcommand*{\xgX}{g}
-\newcommand*{\xg¬workreport}{\¬workreport}
-\newcommand*{\xg¬timeslot}{t}
-\newcommand*{\xg¬credential}{a}
 
 \newcommand*{\xp¬serviceindex}{\¬serviceindex}
 \newcommand*{\xp¬data}{\mathbf{d}}
@@ -771,11 +773,11 @@
 \newcommand*{\accountspostpreimage}{\accounts'}
 \newcommand*{\accountspost}{\accounts'}
 
-\newcommand*{\reports}{\rho}
-\newcommand*{\reportspre}{\reports}
-\newcommand*{\reportspostjudgement}{\reports^\dagger}
-\newcommand*{\reportspostassurances}{\reports^\ddagger}
-\newcommand*{\reportspostguarantees}{\reports'}
+\newcommand*{\availassignments}{\rho}
+\newcommand*{\availassignmentspre}{\availassignments}
+\newcommand*{\availassignmentspostjudgment}{\availassignments^\dagger}
+\newcommand*{\availassignmentspostassurances}{\availassignments^\ddagger}
+\newcommand*{\availassignmentspostguarantees}{\availassignments'}
 
 \newcommand*{\activity}{\pi}
 \newcommand*{\valstatsaccumulator}{\activity_V}
