--- a/text/definitions.tex
+++ b/text/definitions.tex
@@ -35,6 +35,7 @@
   \item[$\workcontext$] The set of work-$\mathbb{C}$ontexts. See equation \ref{eq:workcontext}. \emph{Not used as the set of complex numbers.}
   \item[$\workdigest$] The set of work-$\mathbb{D}$igests. See equation \ref{eq:workdigest}.
   \item[$\workerror$] The set of work execution $\mathbb{E}$rrors. See equation \ref{eq:workerror}.
+  \item[$\guarantee$] The set of work-report $\mathbb{G}$uarantees. See equation \ref{eq:guarantee}.
   \item[$\hash$] The set of 32-octet cryptographic values, equivalent to $\blob[32]$. Often a $\mathbb{H}$ash function's result. See section \ref{sec:cryptography}.
   \begin{description}
     \item[$\edkey$] The set of Ed25519 public keys. A subset of $\blob[32]$. See section \ref{sec:signing}.
@@ -45,6 +46,7 @@
   \item[$\valkey$] The set of validator $\mathbb{K}$ey-sets. See equation \ref{eq:validatorkeys}.
   \item[$\implications$] The set representing implications of accumulation. See equation \ref{eq:implications}.
   \item[$\ram$] The set of \textsc{pvm} $\mathbb{M}$emory (\textsc{ram}) states. See equation \ref{eq:pvmmemory}.
+  \item[$\acconeout$] The set of single-service accumulation $\mathbb{O}$utputs. See equation \ref{eq:acconeout}.
   \item[$\workpackage$] The set of work-$\mathbb{P}$ackages. See equation \ref{eq:workpackage}.
   \item[$\workreport$] The set of work-$\mathbb{R}$eports. See equation \ref{eq:workreport}. \emph{Note used for the set of real numbers.}
   \item[$\partialstate$] The set representating a portion of overall $\mathbb{S}$tate, used during accumulation. See equation \ref{eq:partialstate}.
@@ -203,10 +205,10 @@ Here, the prime annotation indicates posterior state. Individual components may 
   \item[$\stagingset$] The validator keys and metadata to be drawn from next. See equation \ref{eq:validatorkeys}.
   \item[$\activeset$] The validator keys and metadata currently active. See equation \ref{eq:validatorkeys}.
   \item[$\previousset$] The validator keys and metadata which were active in the prior epoch. See equation \ref{eq:validatorkeys}.
-  \item[$\reports$] The pending reports, per core, which are being made available prior to accumulation. See equation \ref{eq:reportingstate}.
+  \item[$\availassignments$] The pending work-report guarantees, per core, which are being made available prior to accumulation. See equation \ref{eq:reportingstate}.
   \begin{description}
-    \item[$\reportspostjudgement$] The post-judgment, pre-guarantees-extrinsic intermediate state. See equation \ref{eq:removenonpositive}.
-    \item[$\reportspostassurances$] The post-assurances-extrinsic, pre-guarantees-extrinsic, intermediate state. See equation \ref{eq:reportspostassurancesdef}.
+    \item[$\availassignmentspostjudgment$] The post-judgment, pre-assurances-extrinsic intermediate state. See equation \ref{eq:removenonpositive}.
+    \item[$\availassignmentspostassurances$] The post-assurances-extrinsic, pre-guarantees-extrinsic, intermediate state. See equation \ref{eq:availassignmentspostassurancesdef}.
   \end{description}
   \item[$\thestate$] The overall state of the system. See equations \ref{eq:statetransition}, \ref{eq:statecomposition}.
   \item[$\thetime$] The most recent block's timeslot. See equation \ref{eq:timeslotindex}.
